services/finance-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-service
  labels:
    app: finance-service
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 8090
      targetPort: 8090
  selector:
    app: finance-service
